# hoshimi-cli

./: .gitignore  CMakeLists.txt  README.md  config.h.in  json_schema.json  main.cpp  version.h.in
.cache/clangd/index/: colorscheme.hpp.770AF9ED23986DE7.idx  files.hpp.A4A36B52CC73DF9F.idx  json.hpp.03047598A6DAADDD.idx  main.cpp.11EBE84150328F8A.idx  utils.hpp.747A682CFCBF4D4C.idx
.github/workflows/: c-cpp.yml  create-release.yml  lint.yml
completions/: _hoshimi  hoshimi.fish
schema/: bar_schema.json  color_schema.json  json_schema.json  theme_schema.json
src/: colorscheme.hpp  files.hpp  json.hpp  main.cpp  utils.hpp
src/common/: colorscheme.hpp  json.hpp  utils.c  utils.h  utils.hpp
src/common/json/: json.hpp  json_wrapper.cpp  json_wrapper.h
src/common/utils/: utils.c  utils.h  utils.hpp  utils_impl.c
src/osu/: circles.h  hitsounds.h  osu.c  osu.h  osu_assembler.c  osu_impl.c
src/utils/: headers.hpp  utils.hpp
